<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/clientLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="1.1">

                <android.support.v7.widget.CardView
                    android:id="@+id/headerCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/headerImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/off_the_clock_header"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/cardLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:animateLayoutChanges="true"
                        android:padding="16dp"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp">

                        <TextView
                            android:id="@+id/clientName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:autoSizeMaxTextSize="45dp"
                            android:autoSizeTextType="uniform"
                            android:text="Client Name"
                            android:textColor="@android:color/white"
                            android:textSize="32sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/chronometer"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/lblHours"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Unbilled Hours"
                            android:textColor="@android:color/white"
                            app:layout_constraintBottom_toTopOf="@+id/clientHours"
                            app:layout_constraintLeft_toLeftOf="@id/clientName" />

                        <TextView
                            android:id="@+id/clientHours"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="0"
                            android:textColor="@android:color/white"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@id/lblHours" />

                        <Chronometer
                            android:id="@+id/chronometer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="@android:color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/clientName"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/clientName" />

                        <!--<TextView-->
                        <!--android:id="@+id/ontheClockView"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="OTC"-->
                        <!--android:textColor="#99ffffff"-->
                        <!--android:textSize="22sp"-->
                        <!--android:textStyle="bold"-->
                        <!--android:visibility="visible"-->
                        <!--app:layout_constraintBottom_toBottomOf="@+id/clientName"-->
                        <!--app:layout_constraintEnd_toEndOf="parent"-->
                        <!--app:layout_constraintTop_toTopOf="@+id/clientName" />-->

                        <ImageView
                            android:id="@+id/settingsBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:padding="12dp"
                            android:tint="@android:color/white"
                            android:visibility="gone"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_settings_black_24dp" />

                    </android.support.constraint.ConstraintLayout>

                </android.support.v7.widget.CardView>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/addClockFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:tint="@android:color/white"
                    app:elevation="7dp"
                    app:layout_constraintBottom_toBottomOf="@+id/headerCard"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_add_black_24dp" />

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name" />

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/detailFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="20dp"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_anchorGravity="bottom"
        app:srcCompat="@drawable/ic_receipt_black_24dp" />

</android.support.design.widget.CoordinatorLayout>
